# pyspypoint

./: .gitignore  COPYRIGHT  README.md  setup.cfg  setup.py
spypoint/: __init__.py  client.py  exceptions.py
test/: __init__.py  test_client.py
