[metadata]
name = pyspypoint
description = Client for SPYPOINT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hstern/pyspypoint
author = Henry Stern
author_email = henry@stern.ca
license = Apache 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = spypoint
setup_requires =
    setuptools_scm
install_requires =
    requests
    importlib; python_version < "3.1"
zip_safe = True

[options.extras_require]
test =
    requests-mock
